# blink

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Readme.md  go.mod  rust-toolchain.toml
assets/: Blink.icns
src/: ax.rs  main.rs  menu.rs  tap.rs
tools/: go.mod
